[package]
name = "dtmf"
version = "1.0.0"
edition = "2021"
authors = ["Christopher Gundler <c.gundler@mail.de>", "Carmen Meixner", "Janis Pütz"]
repository = "https://github.com/NikolaiSch/dtmf-rs"
license = "MIT"
readme = "README.md"
description = "An encoder and decoder for DTMF"


[[bin]]
name = "dtmf"
doc = false

[dependencies]
clap = "4.1.8"
dasp = "0.11.0"
dasp_signal = "0.11.0"
hound = "3.5.0"
